--- a/FinalExam/src/main/resources/app/view/Retirement.fxml
+++ b/FinalExam/src/main/resources/app/view/Retirement.fxml
@@ -72,7 +72,14 @@
                   <Insets />
                </GridPane.margin>
             </HBox>
-            <TextField fx:id="txtYearsToWork" prefHeight="25.0" prefWidth="62.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtYearsToWork" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="amountToSaveLabel" text="..." GridPane.columnIndex="1" />
+            <Label fx:id="totalAmountSavedLabel" text="..." GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="txtAnnualReturnWorking" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtYearsRetired" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="txtAnnualReturnRetired" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <TextField fx:id="txtRequiredIncome" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="txtMonthlySSI" GridPane.columnIndex="1" GridPane.rowIndex="9" />
          </children>
       </GridPane>
    </center>
